--- a/install
+++ b/install
@@ -4,7 +4,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -12,7 +12,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -20,7 +20,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -28,7 +28,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -36,7 +36,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -44,7 +44,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -52,7 +52,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -60,7 +60,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -68,7 +68,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -76,7 +76,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -84,7 +84,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -92,7 +92,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -100,7 +100,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -108,7 +108,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -116,7 +116,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -124,7 +124,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -132,7 +132,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -140,7 +140,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -148,7 +148,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -156,7 +156,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -164,7 +164,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -172,7 +172,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -180,7 +180,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -188,7 +188,7 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
-npm i caz --registry=https://registry.npmjs.org/
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
 
@@ -196,6 +196,286 @@ npm i caz --registry=https://registry.npmjs.org/
 rm -rf node_modules
 rm -rf package-lock.json
 
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
 npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmjs.org/
+rm -rf node_modules
+rm -rf package-lock.json
+
+npm i caz --registry=https://registry.npmmirror.com/
 rm -rf node_modules
 rm -rf package-lock.json
